[package]
name = "crsio2"
version = "0.1.1"

[lib]
path = "src/lib.rs"

[[test]]
name = "basic_broker"
harness = false

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["ntdef", "processthreadsapi", "namedpipeapi"] }

[build-dependencies]
bindgen = "0.23"
glob = "0.2"

[dev-dependencies]
rand = "0.3"
